--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/taylor/Data/PyCharm Projects/Genome Assembly Project\n",
-      "example.data.fasta\n",
-      "real.error.large.fasta\n",
-      "real.error.small.fasta\n",
-      "synthetic.example.noerror.small.fasta\n",
-      "synthetic.noerror.large.fasta\n",
-      "synthetic.noerror.small.fasta\n"
+      "/media/taylor/eef4fe97-0587-4acb-b65d-f0ad5ed8d623/taylor/GitHub/genome_assembler\n",
+      "4 synthetic.noerror.large.fasta\n",
+      "6 real.error.large.fasta\n",
+      "1 example.data.fasta\n",
+      "5 real.error.small.fasta\n",
+      "3 synthetic.noerror.small.fasta\n",
+      "2 synthetic.example.noerror.small.fasta\n"
      ]
     }
    ],
@@ -34,9 +34,9 @@
     "#./assemblers/velvet_1.2.10/velvetg \"./data\" \n",
     "\n",
     "\n",
-    "k = \"15\"\n",
-    "results_path = r\"/media/taylor/Data/PyCharm Projects/Genome Assembly Project/data/results\"\n",
-    "path = r\"/media/taylor/Data/PyCharm Projects/Genome Assembly Project/data\"\n",
+    "k = \"17\"\n",
+    "results_path = r\"./data/results\"\n",
+    "path = r\"./data\"\n",
     "\n",
     "print(os.getcwd())\n",
     "\n",
@@ -48,6 +48,7 @@
     "        output_path = os.path.join(results_path, fname)\n",
     "        mkdir(output_path)\n",
     "        p = subprocess.Popen([r\"./assemblers/velvet_1.2.10/velveth\", output_path, k, file_path],shell=False,stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "        #\"-short2\"\n",
     "        #print(p.communicate())\n",
     "        #print(p.returncode)\n",
     "        subprocess.Popen([r\"./assemblers/velvet_1.2.10/velvetg\", output_path],shell=False,stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
@@ -65,9 +66,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "670",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
